# meta-rag

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  README.md  SCHEMA_EVOLUTION_PLAN.md  pyproject.toml
examples/: eval_tests.yaml  example_usage.py  run_eval.py
examples/documents/: curie.txt  darwin.txt  einstein.txt  faraday.txt  hypatia.txt  lovelace.txt  newton.txt  noether.txt  ramanujan.txt  tesla.txt  turing.txt
src/duo_rag/: __init__.py  prompts.py  schema.py
src/duo_rag/ingestion/: __init__.py  extractor.py  pipeline.py
src/duo_rag/query/: __init__.py  executor.py  pipeline.py  tools.py
src/duo_rag/stores/: __init__.py  base.py  relational.py  vector.py
src/meta_rag/: __init__.py  prompts.py  schema.py
src/meta_rag/ingestion/: __init__.py  chunker.py  extractor.py  pipeline.py
src/meta_rag/query/: __init__.py  executor.py  pipeline.py  tools.py
src/meta_rag/stores/: __init__.py  base.py  relational.py  vector.py
tests/: test_ingestion.py  test_prompts.py  test_query.py  test_schema.py  test_schema_evolution.py
