[project]
name = "meta-rag"
version = "0.1.0"
description = "Extends RAG with structured query capabilities using dual vector + relational storage"
readme = "README.md"
authors = [
    { name = "Cagri Yucel", email = "cagri@instant-ps.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai",
    "chromadb",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
