[project]
name = "duo-rag"
version = "0.1.8"
description = "Extends RAG with structured query capabilities using dual vector + relational storage"
readme = "README.md"
authors = [
    { name = "Cagri Yucel", email = "1134069+cagriy@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["rag", "retrieval-augmented-generation", "metadata", "llm", "openai", "chromadb", "schema", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.0",
    "chromadb>=0.4",
    "python-dotenv>=0.19",
]

[project.urls]
Homepage = "https://github.com/cagriy/duo-rag"
Repository = "https://github.com/cagriy/duo-rag"
Changelog = "https://github.com/cagriy/duo-rag/releases"
Issues = "https://github.com/cagriy/duo-rag/issues"

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = [
    "pytest",
]
eval = [
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "examples/",
    "DESIGN.md",
    "PYPI.md",
    ".env.example",
    ".claudeignore",
    ".gitignore",
    ".python-version",
    "uv.lock",
]
